--- a/FrikiHouse/.classpath
+++ b/FrikiHouse/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/cheet/Documents/JAVA LIBS/mysql-connector-j-9.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/crist/Documents/mysql-connector-j-9.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
